task-3-istio-zero-trust/manifests/sleep.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sleep
  namespace: payments
  labels:
    app: sleep
spec:
  serviceAccountName: ledger-sa
  containers:
  - name: sleep
    image: curlimages/curl
    command: ["/bin/sh","-c","sleep 365d"]
