task-3-istio-zero-trust/manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ledger-network-policy
  namespace: payments
spec:
  podSelector:
    matchLabels:
      app: ledger-api
  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - podSelector: {}

  egress:
  - to:
    - podSelector: {}
